Create the .pylintrc file

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ djangorestframework-csv = "*"
 djangorestframework-yaml = "*"
 djangorestframework-xml = "*"
 djoser = "*"
+pylint-django = "*"
 
 [dev-packages]
 
